MSE: Avoid GCC constexpr bug in SBS::BufferingByPts()

Changes SBS<...>::BufferingByPts from constexpr to a simple const member
method to avoid https://gcc.gnu.org/bugzilla/show_bug.cgi?id=66297
(which impacts those who build Chromium using older versions of GCC (<
7.2)).

BUG=777391

Change-Id: I6356b999c9d1dc4a9e2706cff9039e50633d5ef5